feat: added reactotron

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,9 @@
       ],
       "@theme/*": [
         "./src/theme/*"
+      ],
+      "@store/*": [
+        "./src/store/*"
       ]
     }
   }
