--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/roboto": "^0.2.3",
     "@hookform/resolvers": "^3.3.2",
+    "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@rematch/core": "^2.2.0",
+    "@rematch/persist": "^2.1.2",
     "expo": "~49.0.15",
     "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
@@ -28,6 +31,10 @@
     "react-native-screens": "^3.27.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-redux": "^8.1.3",
+    "reactotron-react-native": "^5.0.3",
+    "reactotron-redux": "^3.1.3",
+    "redux": "^4.2.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
