--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.16",
     "@rematch/core": "^2.2.0",
     "@rematch/persist": "^2.1.2",
+    "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
